--- a/visualizador/index.html
+++ b/visualizador/index.html
@@ -5,30 +5,60 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Visualizador de Ordenamientos — Python externo</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <style>
+    input[type=range]::-webkit-slider-runnable-track {
+  height: 6px;
+  background: linear-gradient(90deg, #f0abfc, #60a5fa, #22d3ee);
+  border-radius: 10px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 18px;
+  height: 18px;
+  background: #a78bfa;
+  border-radius: 50%;
+  box-shadow: 0 0 12px #a78bfa;
+  margin-top: -6px;
+}
+#canvasWrap canvas {
+  animation: fadeIn .4s ease;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: scale(.98); }
+  to   { opacity: 1; transform: scale(1); }
+}
+    button.primary:hover {box-shadow: 0 0 12px var(--accent);transform: scale(1.04);}
+    .card {box-shadow: 0 4px 18px rgba(0,0,0,0.25);transition: transform .15s ease, box-shadow .15s ease;}
+    .card:hover {transform: translateY(-2px); box-shadow: 0 6px 28px rgba(0,0,0,0.35);}
     :root { --bg:#0f172a; --panel:#111827; --muted:#94a3b8; --text:#e2e8f0; --accent:#22d3ee; }
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Arial;background:linear-gradient(180deg,#0b1220,var(--bg));color:var(--text);min-height:100vh;display:grid;grid-template-rows:auto 1fr}
     header{padding:16px 20px;border-bottom:1px solid #1f2937;background:rgba(17,24,39,.75);backdrop-filter:blur(6px);display:flex;align-items:center;gap:12px;flex-wrap:wrap}
     h1{font-size:18px;margin:0;letter-spacing:.3px}
-    .pill{padding:4px 10px;border-radius:999px;background:#1f2937;color:var(--muted);font-size:12px}
+    .pill{padding:4px 10px;border-radius:999px;background:#ffffff;color:#000000;font-size:12px}
     main{padding:12px 16px 20px;display:grid;grid-template-rows:auto 1fr auto;gap:12px}
     .controls{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:10px;width:100%}
-    .card{background:var(--panel);border:1px solid #1f2937;border-radius:14px;padding:12px}
+    .card{background:var(--panel);border:0px solid #eceff3;border-radius:14px;padding:12px;}
     label{font-size:12px;color:var(--muted);display:block;margin-bottom:6px}
     select,input[type=range],input[type=file]{width:100%;padding:10px;border-radius:10px;border:1px solid #334155;background:#0b1220;color:var(--text)}
     .row{display:flex;align-items:center;gap:10px}
     .row>*{flex:1}
     .btns{display:flex;flex-wrap:wrap;gap:10px}
-    button{background:#0b1220;color:var(--text);border:1px solid #334155;padding:10px 14px;border-radius:12px;cursor:pointer;transition:transform .06s ease,border-color .2s ease}
+    button{background:#0b1220;color:var(--text);border:1px solid #e0e0e0;padding:10px 14px;border-radius:12px;cursor:pointer;transition:transform .06s ease,border-color .2s ease}
     button:hover{border-color:var(--accent)}
     button:active{transform:translateY(1px)}
     button.primary{border-color:var(--accent);box-shadow:inset 0 0 0 1px var(--accent)}
-    #canvasWrap{background:#0b1220;border:1px dashed #334155;border-radius:16px;padding:10px;position:relative}
+    #canvasWrap{background:#000000;border:0px dashed #ffffff;border-radius:16px;padding:10px;position:relative}
+
     #view{width:100%;height:64vh;display:block;border-radius:10px;background:radial-gradient(1000px 500px at 20% -10%,rgba(34,211,238,.08),transparent 70%),radial-gradient(900px 500px at 80% 110%,rgba(167,139,250,.08),transparent 70%),#0a0f1d}
     .footer{color:var(--muted);font-size:12px;text-align:center;padding:8px 0}
     .kbd{font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;background:#0b1220;border:1px solid #334155;padding:2px 6px;border-radius:6px}
   </style>
+  
   <script src="https://cdn.jsdelivr.net/pyodide/v0.26.0/full/pyodide.js" defer></script>
   <script defer>
   'use strict';
@@ -398,10 +428,9 @@
             <option value="insertion">Insertion Sort (PY)</option>
             <option value="selection">Selection Sort (PY)</option>
             <option value="quick">Quick Sort (PY)</option>
-            <option value="Comb">Comb sort (PY)</option>
-            <option value="Gnome">Gnome sort (PY)</option>
-<option value="merge">Merge Sort (PY)</option>
-
+            <option value="comb">Comb sort (PY)</option>
+            <option value="gnome">Gnome sort (PY)</option>
+            <option value="template">Template Sort (PY)</option>
           </select>
         </div>
       </div>
@@ -433,14 +462,14 @@
       <div class="card">
         <label>Acciones</label>
         <div class="btns">
-          <button id="shuffle">Mezclar</button>
-          <button id="play" class="primary">Reproducir</button>
-          <button id="step">Paso</button>
-          <button id="pause">Pausa</button>
-          <button id="reset">Reset</button>
+          <button id="shuffle"><i class="bi bi-shuffle"></i></button>
+          <button id="play" class="primary"><i class="bi bi-play-circle"></i></button>
+          <button id="step"><i class="bi bi-bar-chart-steps"></i></button>
+          <button id="pause"><i class="bi bi-pause-circle"></i></button>
+          <button id="reset"><i class="bi bi-repeat"></i></button>
           <button id="reloadPy">Recargar Python</button>
         </div>
-        <div style="margin-top:8px">Ejecución: <span class="pill" id="modeExec">Python</span></div>
+        <div style="margin-top:8px;color:white">Ejecución: <span class="pill" id="modeExec">Python</span></div>
       </div>
     </section>
 
@@ -452,4 +481,5 @@
     </div>
   </main>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </html>
